Fix text alignment in hero section styles

--- a/scss/layouts/_hero-section.scss
+++ b/scss/layouts/_hero-section.scss
@@ -60,7 +60,7 @@
       font-size: 12px;
       font-weight: 400;
       margin-left: 16px;
-      text-align: leftit;
+      text-align: left;
     }
   }
   &__text {
